--- a/style1.css
+++ b/style1.css
@@ -1,15 +1,23 @@
+/* Reset some default styles */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* Set a common background image for all elements */
+body {
+    background-image: url("assets/title board.jpg");
+    background-position: 50%;
+    text-align: center;
+}
+
 .header {
     text-align: center;
 }
 
-* {
-    background-image: url("assets/title\ board.jpg");
-    background-position: 50%;
-}
-
 .taskForm {
     background-image: url("assets/form.jpg");
-    text-align: center;
     display: flex;
     flex-direction: column;
     width: 50%;
@@ -22,44 +30,6 @@
     box-shadow: 2px 2px 10px black;
 }
 
-/* .hidden {
-    display: none;
-} */
-
-/* @font-face {
-    font-family: "PTSans";
-    src: url("/assets/font/Sandler\ Trial.otf");
-}
-
-* {
-    margin: 0;
-    padding: 0;
-
-}
-
-body {
-    text-align: center;
-    background-image: url("/assets/image/tile.jpg");
-    /* box-sizing: border-box; }
-    */
-
-
-/* #taskForm {
-    width: 50%;
-    max-width: 300px;
-    height: 150px;
-    max-height: 300px;
-    list-style: none;
-    background-image: url("/assets/image/formbg.jpg");
-    background-size: contain;
-    background-position: center;
-    border-radius: 6px;
-    padding: 20px 20px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-} */
-
 .container {
     margin: 50px;
     display: grid;
@@ -68,17 +38,14 @@ body {
     justify-content: center;
 }
 
-li {
-    list-style: none;
-}
-
+/* Apply background image to task elements */
 .task {
-    background-image: url("/assets/image/notebg.png");
+    background-image: url("assets/image/notebg.png");
     background-size: 250px 250px;
     background-repeat: no-repeat;
 }
 
-*/ .task .taskText {
+.task .taskText {
     display: block;
     margin-top: 16px;
     text-align: left;
@@ -109,6 +76,7 @@ li {
     margin-left: 10px;
 }
 
+/* Define fadeIn animation */
 @keyframes fadeIn {
     0% {
         opacity: 0;
@@ -119,6 +87,7 @@ li {
     }
 }
 
+/* Apply fadeIn animation to specific elements */
 .fadeIn-container {
     animation: fadeIn 2s;
 }
