--- a/23sep7/style1.css
+++ b/23sep7/style1.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "PTSans";
+    src: url("/assets/font/Sandler\ Trial.otf");
+}
+
 .header {
     text-align: center;
 }
@@ -22,14 +27,6 @@
     box-shadow: 2px 2px 10px black;
 }
 
-.hidden {
-    display: none;
-}
-
-@font-face {
-    font-family: "PTSans";
-    src: url("/assets/font/Sandler\ Trial.otf");
-}
 
 * {
     margin: 0;
@@ -71,7 +68,7 @@ li {
     list-style: none;
 }
 
-.task {
+.tasks {
     background-image: url("/assets/image/notebg.png");
     background-size: 250px 250px;
     background-repeat: no-repeat;
